<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="versionname">NeoCom 0.8.1</string>
    <string name="AppDescription">"Application to get access to CCP api information and help manage industrial activities for characters and corporations at Eve Online. The set is composed of some projects with implementation for Android and for an AngularJS web interface based on REST services on Sprint Boot Cloud."</string>
    <string name="app_versionsuffix">05</string>
    <string name="databaseversion">81</string>
    <string name="databasechangeversioncomment_v081">v081 - Change in the name of the new Assets colum need to drop and recreate that Column.</string>
    <string name="databasechangeversioncomment_v065">v065 - New column on Asset to store the asset estimated value.</string>
    <string name="databasechangeversioncomment_v064">v064 - Added a nre table for the locations.</string>
    <string name="databasechangeversioncomment_v053">v053 - Changed the way Property IDs are generated. Clearing the table to create it back.</string>
    <string name="databasechangeversioncomment_v052">v052 - Added more calculated fields to the Blueprints.</string>
    <string name="databasechangeversioncomment_v051">v051 - Added more calculated fields to the Blueprints.</string>
    <string name="databasechangeversioncomment_v050">v050 - Added the MarketOrders table.</string>
    <string name="databasechangeversioncomment_v049">v049 - Parent asset converted into an asset identifier. Parent asset download done on access and not on query.</string>
    <string name="databasechangeversioncomment_v048">v048 - Added back the userLabel to the assets. Needs to drop this table.</string>
    <string name="databasechangeversioncomment_v047">v047 - The Items and Locations are now extracted from the eve.db so the user databse is no longer needed to be set on the project.</string>
    <string name="action_settingslabel">Settings</string>
    <string name="title_activity_PilotList">Pilot Selection</string>
    <string name="title_activity_DirectorsBoard">Activity Selection</string>
    <string name="title_activity_AssetsDirector">Assets Inventory</string>

    <!-- DEFAUL VALUES FOR UI BUILD UP -->
    <string name="default_description">ImageView Content Description</string>
    <string name="default_number">50.32-</string>
    <string name="default_smallnumber">1-</string>
    <string name="default_bignumber">345,897.--</string>
    <string name="default_paiddate">2017.01.12 20:30</string>
    <string name="default_apikeynumber">1084582</string>
    <string name="default_multiplier">x2.-</string>
    <string name="default_index">01-</string>
    <string name="default_runs">03-</string>
    <string name="default_jobs">05</string>
    <string name="default_isk">345,897.-- ISK</string>
    <string name="default_location">-0.1 Paye IX - Moon 1 - TransStellar Shipping Storage</string>
    <string name="default_system">Dodixie</string>
    <string name="default_region">The Forge</string>
    <string name="default_market">The Forge - Jita</string>
    <string name="default_security">0.9</string>
    <string name="default_itemname">Nanofiber Internal Structure II</string>
    <string name="default_bponame">Nanofiber Internal Structure I Blueprint</string>
    <string name="default_shipname">Epithal - Industrial</string>
    <string name="default_grouptitle">SCHEDULED SELL</string>
    <string name="default_regionname">Tash-Murkon - Moon 22</string>
    <string name="default_fittingname">HCBC Impact 1.0</string>
    <string name="default_fittingclass">Combat Battlecruiser >> Harbinger</string>
    <string name="default_label">-LABEL-</string>
    
    <!-- CONTEXT MENU VALUES -->
    <string-array name="assetActions">
        <item>MOVE</item>
        <item>LOAD</item>
        <item>UNLOAD</item>
        <item>-CLEAR-</item>
    </string-array>

    <string name="title_activity_mining_session">MiningSessionActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="security10">#2FEFEF</string>
    <string name="security09">#48F0C0</string>
    <string name="security08">#00EF47</string>
    <string name="security07">#00F000</string>
    <string name="security06">#8FEF2F</string>
    <string name="security05">#EFEF00</string>
    <string name="security04">#D77700</string>
    <string name="security03">#F06000</string>
    <string name="security02">#F04800</string>
    <string name="security01">#D73000</string>
    <string name="security00">#F00000</string>
    <string name="fittingSpinnerLabel">Select fitting:</string>
    <string name="copiesSpinnerLabel">Select copies:</string>

</resources>