<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/actiongreentraslucent" >

    <ImageView
        android:id="@+id/rightArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/imageview_defaultcontent"
        android:padding="-4dp"
        android:src="@drawable/arrowright" />

    <RelativeLayout
        android:id="@+id/accountDataBlockLabels"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/rightArrow" >

        <org.dimensinfin.eveonline.neocom.core.Din1451TextView
            android:id="@+id/key"
            style="@style/Name.Style.14"
            android:layout_alignBaseline="@+id/timeLeft"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:singleLine="true"
            android:text="@string/default_apikeynumber" />

        <org.dimensinfin.eveonline.neocom.core.Din1451BoldTextView
            android:id="@+id/timeLeft"
            style="@style/Name.Style.12"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="right"
            android:text="@string/default_paiddate" />

        <TextView
            android:id="@+id/paidUntilLabel"
            style="@style/AppTheme.LabelUpLineStyle"
            android:layout_width="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/timeLeft"
            android:gravity="right"
            android:text="PAID UNTIL" />

        <org.dimensinfin.eveonline.neocom.core.Din1451TextView
            android:id="@+id/type"
            style="@style/Name.Style.12"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/key"
            android:text="@string/default_description" />
    </RelativeLayout>

</RelativeLayout>