<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/blacktraslucent80" >

    <ImageView
        android:id="@+id/rightArrow"
        style="@style/RightArrow"
        android:contentDescription="@string/imageview_defaultcontent" />

    <ImageView
        android:id="@+id/groupIcon"
        style="@style/ItemIconStyle.Size24"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="1dp"
        android:background="@color/groupiconbackground"
        android:contentDescription="@string/imageview_defaultcontent"
        android:src="@drawable/market" />

    <org.dimensinfin.evedroid.core.DaysTextView
        android:id="@+id/title"
        style="@style/NameStyle.White"
        android:layout_toRightOf="@+id/groupIcon"
        android:text="@string/default_grouptitle"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/analyticalDataGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_toLeftOf="@+id/rightArrow"
        android:layout_toRightOf="@+id/groupIcon"
        android:orientation="horizontal" >

        <org.dimensinfin.evedroid.core.Din1451BoldTextView
            android:id="@+id/totalItemCount"
            style="@style/NameStyle.White"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="right"
            android:text="@string/default_number"
            android:visibility="visible" />

        <org.dimensinfin.evedroid.core.Din1451BoldTextView
            android:id="@+id/budget"
            style="@style/NameStyle.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/quantity"
            android:gravity="right"
            android:text="@string/default_isk"
            android:visibility="visible" />

        <org.dimensinfin.evedroid.core.Din1451BoldTextView
            android:id="@+id/quantity"
            style="@style/NameStyle.White"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:text="@string/default_smallnumber"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/analyticalDataLabels"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/analyticalDataGroup"
        android:layout_toLeftOf="@+id/rightArrow"
        android:background="@drawable/topwhiteline"
        android:layout_toRightOf="@+id/groupIcon" >

        <org.dimensinfin.evedroid.core.Din1451TextView
            android:id="@+id/totalItemCountlabel"
            style="@style/LabelStyle.Small"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
            android:gravity="right"
            android:text="TOTAL ITEMS"
            android:visibility="visible" />

        <org.dimensinfin.evedroid.core.Din1451TextView
            android:id="@+id/budgetLabel"
            style="@style/LabelStyle.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BUDGET"
            android:layout_toLeftOf="@+id/quantityLabel"
            android:visibility="visible" />

        <org.dimensinfin.evedroid.core.Din1451TextView
            android:id="@+id/quantityLabel"
            style="@style/LabelStyle.Small"
            android:layout_width="60dp"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:text="ORDERS"
            android:visibility="visible" />
    </RelativeLayout>

</RelativeLayout>