<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/redtraslucent40" >

    <ImageView
        android:id="@+id/rightArrow"
        style="@style/RightArrow" />

    <ImageView
        android:id="@+id/itemIcon"
        style="@style/ItemIconStyle" />

    <org.dimensinfin.eveonline.neocom.core.Din1451BoldTextView
        android:id="@+id/locationRegion"
        style="@style/NameStyle"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="right"
        android:text="@string/default_region" />

    <RelativeLayout
        android:id="@+id/dataBlock"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/rightArrow"
        android:layout_toRightOf="@+id/itemIcon" >

        <org.dimensinfin.eveonline.neocom.core.Din1451BoldTextView
            android:id="@+id/locationSystem"
            style="@style/NameStyle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="Tash-Murkon - Moon 22"
            android:textSize="14sp" />

        <RelativeLayout
            android:id="@+id/stationBlock"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/locationSystem"
            android:background="@drawable/bottomwhiteline" >

            <org.dimensinfin.eveonline.neocom.core.Din1451EngTextView
                android:id="@+id/locationStation"
                style="@style/LocationStyle"
                android:layout_alignBaseline="@+id/childCount"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/childCount"
                android:text="@string/default_location" />

            <org.dimensinfin.eveonline.neocom.core.Din1451BoldTextView
                android:id="@+id/childCount"
                style="@style/NumberStyle.XL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:minWidth="30dp"
                android:text="@string/default_smallnumber"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/stationLabelBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/stationBlock" >

            <TextView
                android:id="@+id/locationLabel"
                style="@style/LabelStyle.Small"
                android:layout_alignParentLeft="true"
                android:text="STATION" />

            <TextView
                android:id="@+id/childCountLabel"
                style="@style/LabelStyle.Small"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:text="ITEMS" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/functionBlock"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stationLabelBlock" >

            <TextView
                android:id="@+id/role"
                style="@style/LocationStyle.Role"
                android:layout_width="wrap_content"
                android:layout_toLeftOf="@+id/functionLabel"
                android:gravity="right"
                android:text=" MANUFACTURE"
                android:visibility="visible" />

            <TextView
                android:id="@+id/functionLabel"
                style="@style/LabelStyle.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="2dp"
                android:text="ROLE" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/valueBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/functionBlock" >

            <LinearLayout
                android:id="@+id/valueLabelBlock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="90dp"
                android:orientation="vertical" >

                <org.dimensinfin.eveonline.neocom.core.Din1451TextView
                    android:id="@+id/locationItemsValueLabel"
                    style="@style/NumberStyle.LocationData"
                    android:gravity="left"
                    android:text="ISK"
                    android:visibility="visible" />

                <org.dimensinfin.eveonline.neocom.core.Din1451TextView
                    android:id="@+id/locationItemsVolumeLabel"
                    style="@style/NumberStyle.LocationData"
                    android:gravity="left"
                    android:text="m3"
                    android:textSize="10sp"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/valueDataBlock"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/valueLabelBlock"
                android:orientation="vertical" >

                <org.dimensinfin.eveonline.neocom.core.Din1451TextView
                    android:id="@+id/locationItemsValue"
                    style="@style/NumberStyle.LocationData"
                    android:layout_width="fill_parent"
                    android:layout_marginRight="3dp"
                    android:gravity="right"
                    android:text="-"
                    android:visibility="visible" />

                <org.dimensinfin.eveonline.neocom.core.Din1451TextView
                    android:id="@+id/locationItemsVolume"
                    style="@style/NumberStyle.LocationData"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:gravity="right"
                    android:text="-"
                    android:visibility="visible" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>